# 14973_RIAID

14973_RIAID/: 作品介绍.docx
14973_RIAID/robort001_pegasus/: ArmResolving.c  ArmResolving.h  BUILD.gn  arm_cmd.c  arm_cmd.h  robort_move_data.c  robort_move_data.h  servo_cmd.c  servo_cmd.h  step_motor_cmd.c  step_motor_cmd.h  task_create.c  taurus_uart.c  taurus_uart.h  udp_config.h  udp_server.c  udp_server.h
14973_RIAID/robort001_taurus/goods_classify/: goods_classify.c  yolov2_goods_detect.c
14973_RIAID/robort001_taurus/smp/: sample_ai_main.cpp  sample_media_ai.c
